# Dreamer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DREAMFILE  DREAMFILE.zzz  LICENSE  README.md  asdf.plu.yaml  asdfasdfasdf.uni.yaml  cache.main.zzz.yaml  cache.zzz.yaml  dream.zzz.yaml  dreamer-tldr.md  hashtest.uni.yaml  myfile.uni.yaml  pipe.plu.yaml  pipe.uni.yaml  pipe.uni.yml  qwerty.uni.yaml  test  test.txt  test.uni  test.uni.yaml  test.uni.yml  test.zzz.yaml  testfile  testfile.uni.yaml  testfile.zzz.yaml  unify.uni.yaml  unify.yaml
.dev-docs/: ideas.md  new-install.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md
.github/workflows/: autocool.yml  release.yml  rust.yml
docs/: ideas.md  installation.md  philosophy.md  structure.md
src/: helper.rs  main.rs
src/helper/: mod.rs
src/helper/errors/: mod.rs
src/helper/exec/: mod.rs
src/helper/refs/: mod.rs
src/helper/resource/: mod.rs
src/helper/shell/: mod.rs
src/helper/wizards/: mod.rs
