[package]
name = "zzz"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = { version = "0.9.25" }
colored = "2"
[profile.dev]
incremental = true

[profile.release]
opt-level = 3
debug = 0
codegen-units = 1
lto = "thin"
incremental = false

[profile.release.package."*"] # +
opt-level = 3 # +
debug = 0
